--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,10 @@ body {
   position: relative;
 }
 
+article img {
+  width: 100%;
+}
+
 .container {
   display: block;
 }
@@ -680,6 +684,26 @@ body {
 .content {
   margin-top: 24px;
   margin-bottom: 24px;
+}
+
+article .content img {
+  width: 100%;
+}
+
+.content h1,
+.content h2,
+.content h3,
+.content h4,
+.content h5,
+.content h6 {
+  margin-top: 1em;
+}
+
+.content h1,
+.content h2,
+.content h3,
+.content h4 {
+  font-weight: bold;
 }
 
 .content h1:first-child,
