--- a/layouts/index.jade
+++ b/layouts/index.jade
@@ -3,7 +3,7 @@ extend page
 block meta
   meta(property="description" content=site.description)
   meta(name="og:url"          content=site.site_url)
-  meta(name="og:image"        content=helpers.bust("/image.png"))
+  meta(name="og:image"        content=helpers.bust("/image.jpg"))
   meta(name="og:title"        content=site.title)
   meta(name="og:description"  content=site.description)
 
