--- a/layouts/stats.jade
+++ b/layouts/stats.jade
@@ -3,7 +3,7 @@ extend page
 block meta
   meta(property="description" content=site.description)
   meta(name="og:url"         content=site.site_url + 'stats/')
-  meta(name="og:image"       content=helpers.bust("/image.png"))
+  meta(name="og:image"       content=helpers.bust("/image.jpg"))
   meta(name="og:title"       content=title)
   meta(name="og:description" content=site.description)
 
